syntax = "proto3";
package comdex.liquidity.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/liquidity/v1beta1/params.proto";
import "comdex/liquidity/v1beta1/liquidity.proto";

option go_package = "github.com/comdex-official/comdex/x/liquidity/types";
option (gogoproto.goproto_getters_all) = false;


message AppGenesisState {
  uint64 app_id = 1;

  GenericParams generic_params = 2 [(gogoproto.nullable) = false];

  uint64 last_pair_id = 3;

  uint64 last_pool_id = 4;

  repeated Pair pairs = 5 [(gogoproto.nullable) = false];

  repeated Pool pools = 6 [(gogoproto.nullable) = false];

  repeated DepositRequest deposit_requests = 7 [(gogoproto.nullable) = false];

  repeated WithdrawRequest withdraw_requests = 8 [(gogoproto.nullable) = false];

  repeated Order orders = 9 [(gogoproto.nullable) = false];

  repeated ActiveFarmer active_farmers = 10 [(gogoproto.nullable) = false];
  
  repeated QueuedFarmer queued_farmers = 11 [(gogoproto.nullable) = false];

  repeated MMOrderIndex market_making_order_indexes = 12 [(gogoproto.nullable) = false];
}


// GenesisState defines the liquidity module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated AppGenesisState app_genesis_state = 2 [(gogoproto.nullable) = false];
}
